[gd_scene load_steps=3 format=2]

[ext_resource path="res://Pickup3.gd" type="Script" id=1]
[ext_resource path="res://art/kakku.png" type="Texture" id=2]

[node name="Pickup3" type="Area2D" groups=["pickups"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.235563, 0 )
scale = Vector2( 1.0085, 1 )
polygon = PoolVector2Array( -10.7014, -28.6105, 8.47617, -39.1218, 27.2368, -24.4061, 25.9861, 29.4113, -27.3775, 36.9794, -26.9606, -6.74725 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="Pickup3RemoveTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Pickup3_area_entered"]
[connection signal="timeout" from="Pickup3RemoveTimer" to="." method="_on_Pickup3RemoveTimer_timeout"]
